<resources>
    <string name="app_name">UniGo</string>
    <string name="empty_profile_pic_url">empty_profile_pic</string>

    <string-array name="regions">
        <item>Abruzzo</item>
        <item>Basilicata</item>
        <item>Calabria</item>
        <item>Campania</item>
        <item>Emilia Romagna</item>
        <item>Friuli Venezia Giulia</item>
        <item>Lazio</item>
        <item>Liguria</item>
        <item>Lombardia</item>
        <item>Marche</item>
        <item>Molise</item>
        <item>Piemonte</item>
        <item>Puglia</item>
        <item>Sardegna</item>
        <item>Sicilia</item>
        <item>Toscana</item>
        <item>Trentino Alto Adige</item>
        <item>Umbria</item>
        <item>Valle D\'Aosta</item>
        <item>Veneto</item>
    </string-array>

    <string name="permission_camera">Fotocamera</string>
    <string name="permission_storage">Archiviazione</string>
    <string name="permission_denied">Permesso negato</string>
    <string name="intent_package">package</string>
    <string name="permission_needed_camera_storage">Non disponi dei permessi necessari per utilizzare questa funzionalità.
        \nPer continuare, consentire al dispositivo di accedere alla fotocamera e alla memoria di massa.</string>
    <string name="permission_needed_camera">Non disponi dei permessi necessari per utilizzare questa funzionalità.
        \nPer continuare, consentire al dispositivo di accedere alla fotocamera.</string>
    <string name="permission_needed_storage">Non disponi dei permessi necessari per utilizzare questa funzionalità.
        \nPer continuare, consentire al dispositivo di accedere all\'archiviazione del sistema fornendo l\'autorizzazione necessaria.</string>
    <string name="permission_needed_read">Non disponi dei permessi necessari per utilizzare questa funzionalità.
        \nPer continuare, consentire al dispositivo di accedere all\'archiviazione del sistema fornendo l\'autorizzazione necessaria.</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Accedi</string>
    <string name="login_confirm_email">Per continuare, seguire le istruzioni riportate\nsulla mail ricevuta</string>
    <string name="register">Nuovo utente? Registrati ora</string>

    <string name="snackbar_success">Registrazione completata\nTi è stata inviata una mail di conferma</string>
    <string name="snackbar_registration_cancelled">Registrazione annullata</string>
    <string name="snackbar_no_internet_connection">Connessione Internet assente</string>
    <string name="snackbar_retry_login">riprova</string>
    <string name="snackbar_registration_failed">Si è verificato un errore di rete. Riprovare</string>
    <string name="snackbar_login_message">Accesso eseguito come\n</string>
    <string name="snackbar_logout_message">Logout effettuato</string>

    <string name="toast_post_sent">Post creato</string>

    <string name="error_invalid_credentials">Email o Password non validi</string>
    <string name="error_email_is_empty">Inserire l\'email</string>
    <string name="error_email_already_in_use">Email già in uso</string>
    <string name="error_email_invalid">Email non valida</string>
    <string name="error_email_malformed">Spiacenti, l\'email non è stata riconosciuta</string>
    <string name="error_password_is_empty">Inserire la password</string>
    <string name="error_password_is_weak">Password troppo debole (utilizzare almeno 6 caratteri)</string>
    <string name="error_password_mismatch">Le password non coincidono</string>
    <string name="error_step_1">Errore Step 1</string>
    <string name="error_step_2">Errore Step 2</string>
    <string name="error_name_is_empty">Inserire il nome</string>
    <string name="error_lastname_is_empty">Inserire il cognome</string>
    <string name="error_phone">Numero telefonico non valido</string>
    <string name="error_post_title">Inserire il titolo.</string>
    <string name="error_post_course">Inserire la materia.</string>
    <string name="error_post_desc">Nessun testo presente nel corpo del messaggio.</string>
    <string name="error_not_enough_credits">Non disponi di sufficienti crediti per effettuare la domanda.</string>
    <string name="error_network_unavailable">Assicurati di essere connesso ad Internet e riprova.</string>

    <string name="alert_dialog_step1_title">Verifica Email</string>
    <string name="alert_dialog_step1_content">Attendere prego</string>
    <string name="alert_dialog_step3_title">Creazione account</string>
    <string name="alert_dialog_step3_content">L\'operazione può richiedere alcuni minuti..</string>
    <string name="alert_dialog_warning">Attenzione</string>
    <string name="alert_dialog_cancel">Annulla</string>
    <string name="alert_dialog_send">Invia</string>
    <string name="alert_dialog_post_creation">Inserimento domanda</string>

    <string name="signup_toolbar">Nuovo utente</string>
    <string name="signup_icon_desc">Signup Icon</string>
    <string name="step1_title">Login</string>
    <string name="step2_title">Profilo</string>
    <string name="step3_title">Università</string>
    <string name="step_back">Indietro</string>
    <string name="step_next">Avanti</string>
    <string name="step_complete">Fine</string>
    <string name="signup_password">Conferma Password</string>
    <string name="signup_name">Nome</string>
    <string name="signup_lastName">Cognome</string>
    <string name="signup_phone">Telefono</string>
    <string name="signup_city">Città</string>
    <string name="spinner_region_hint">Regione</string>
    <string name="spinner_uni_hint">Università</string>
    <string name="spinner_school_hint">Scuola</string>
    <string name="spinner_course_hint">Corso</string>

    <string name="toolbar_search_hint">Cerca…</string>
    <string name="toolbar_option_hint">Opzioni…</string>
    <string name="toolbar_attachment">Invia allegato</string>
    <string name="toolbar_attachment_picture">Scatta foto</string>
    <string name="toolbar_attachment_gallery">Scegli da galleria</string>
    <string name="toolbar_attachment_file">Allega file</string>
    <string name="toolbar_logout">Logout</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_principale">Principale</string>
    <string name="drawer_tutte">Tutte le domande</string>
    <string name="drawer_domande">Le mie domande</string>
    <string name="drawer_preferiti">Preferiti</string>
    <string name="drawer_sondaggi">Sondaggi</string>
    <string name="drawer_chat">Chat</string>
    <string name="drawer_social">Iscritti al corso</string>
    <string name="drawer_impostazioni">Impostazioni</string>
    <string name="drawer_guida">Guida &amp; info</string>

    <string name="post_toolbar_title">Scrivi</string>
    <string name="post_toolbar_send">Invia</string>
    <string name="post_title">Titolo</string>
    <string name="post_course">Materia</string>
    <string name="post_description">Descrizione</string>

    <string name="rvq_favorite">Aggiungi ai preferiti</string>

    <string name="detail_toolbar">Domanda</string>
    <string name="detail_cardq_course">In ►</string>
    <string name="detail_nanswer">%1$d risposte</string>
    <string name="detail_answer">Rispondi</string>
    <string name="detail_write_answer">Scrivi una risposta…</string>
    <string name="detail_write_comment">Scrivi un commento…</string>
    <string name="detail_rating_desc">Importanza</string>
    <string name="detail_favorite_desc">Preferiti</string>
    <string name="detail_error_answer_done">Hai già risposto a questa domanda</string>
    <string name="detail_snackbar_reply_cancel">Inserimento annullato</string>
    <string name="detail_toast_answer">Risposta effettuata: +10 Exp!</string>
    <string name="detail_error_autolike">Non è consentito votare le proprie risposte</string>
    <string name="detail_error_like_without_connection">Assicurati di essere connesso per effettuare operazioni di rete</string>


    <string name="profile_lvl">Livello %1$d</string>
    <string name="profile_xp">%1$s/%2$s XP</string>
    <string name="profile_xp_max">%1$s XP</string>
    <string name="profile_info">Info Utente</string>
    <string name="profile_email">Email</string>
    <string name="profile_course">Corso</string>
    <string name="profile_city">Città</string>
    <string name="profile_phone">Telefono</string>
    <string name="profile_subscribe">Iscritto il</string>
    <string name="profile_stats">Statistiche</string>
    <string name="profile_total_xp">XP Totali</string>
    <string name="profile_questions">Domande</string>
    <string name="profile_answers">Risposte</string>
    <string name="profile_comments">Commenti</string>
    <string name="profile_credits">Crediti</string>

    <string name="contact_title">Seleziona</string>
    <string name="contact_subtitle">%1$d contatti</string>

    <string name="empty_section">Nessuna domanda in questa sezione</string>
    <string name="empty_chat">Nessun messaggio da visualizzare</string>
    <string name="empty_survey">Nessun sondaggio da visualizzare</string>
    <string name="chat_message_hint">Inserisci un messaggio…</string>
    <!-- notification strings -->
    <string name="no_ringtone">Silenzioso</string>
    <string name="pref_category">Notifiche</string>
    <string name="pref_notification">Ricevi notifiche</string>
    <string name="pref_notificationEvents">Eventi</string>
    <string name="pref_notificationRingtone">Tono notifiche</string>
    <string name="pref_notificationVibration">Vibrazione</string>
    <string name="pref_notificationPriority">Priorità notifiche</string>
    <string name="pref_notificationColor">Luce</string>

    <bool name="pref_notification_defVal">true</bool>
    <string name="pref_notificationRingtone_defVal">DEFAULT_SOUND</string>
    <string name="pref_notificationVibration_defVal">1</string>
    <string name="pref_notificationPriority_defVal">2</string>
    <string name="pref_notificationColor_defVal">2</string>

    <string name="alert_dialog_confirm">OK</string>
    <string name="alert_dialog_max_picture">Non è possibile selezionare altre immagini</string>
    <string name="alert_dialog_max_file">Non è possibile selezionare altri file</string>
    <string name="alert_dialog_max_file_size">Dimensione file troppo grande (Max. 10MB)</string>
    <string name="alert_dialog_request_finish_content">Operazione in corso: \n - %1$s</string>
    <string name="alert_dialog_request_finish_op_upload">Elementi caricati (%1$d/%2$d)</string>
    <string name="imgpicker_select_folder">Seleziona una foto</string>
    <string name="imgpicker_select_img">Seleziona</string>
    <string name="trans_image">Transizione immagine</string>
    <string name="storage_profile_attachment_folder">question_attachments</string>

    <string name="survey_title">Scrivi qui…</string>
    <string name="survey_desc">Informazioni aggiuntive…</string>
    <string name="survey_rv_header">Imposta scelte sondaggio</string>
    <string name="survey_add">Aggiungi voce</string>
    <string name="survey_toolbar_new">Nuovo Sondaggio</string>
    <string name="survey_dialog_add_choice">Inserire qui la nuova voce</string>
    <string name="survey_dialog_more_choices_needed">Inserire almeno 2 opzioni per il sondaggio</string>
    <string name="survey_dialog_too_may_choices">Inserire al massimo 14 opzioni per il sondaggio</string>
    <string name="survey_dialog_sending">Caricamento sondaggio in corso…</string>
    <string name="survey_toast_sent">Sondaggio creato!</string>
    <string name="survey_list_open">Visualizza</string>
    <string name="survey_list_close">Nascondi</string>
    <string name="survey_alert_title">Vota</string>
    <string name="survey_alert_confirm">Conferma</string>
    <string name="survey_vote_confirmed">Grazie per aver votato</string>
</resources>