<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        style="@style/PostToolbar"
        android:id="@+id/PostToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme"
        app:title="@string/post_toolbar_title"
        app:titleTextAppearance="@style/ToolbarTextAppearance" />

    <EditText
        style="@style/FullWidthEditText"
        android:id="@+id/etPostTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerGray"/>

    <EditText
        style="@style/FullWidthEditText"
        android:id="@+id/etPostCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_course"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerGray"/>

    <EditText
        style="@style/FullWidthEditText"
        android:id="@+id/etPostDesc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:hint="@string/post_description"/>
</LinearLayout>