<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/post_title"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"/>

    <EditText
        style="@style/AlertEditText"
        android:id="@+id/etSurvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:inputType="textCapSentences"
        android:hint="@string/survey_title"
        android:textSize="16sp"
        android:fontFamily="sans-serif"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:text="@string/post_description"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"/>

    <EditText
        style="@style/AlertEditText"
        android:id="@+id/etSurvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/survey_desc"
        android:textSize="16sp"
        android:fontFamily="sans-serif"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:text="@string/survey_rv_header"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSurv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:overScrollMode="never"
        android:scrollbars="none" />

    <RelativeLayout
        android:id="@+id/rlSurvAddChoice"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_add_black_24dp"
            android:contentDescription="@null"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="72dp"
            android:paddingEnd="16dp"
            android:text="@string/survey_add"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"/>
    </RelativeLayout>

</LinearLayout>