<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_person_black_24dp"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/signup_icon_desc"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inRegName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/signup_name"
                    android:inputType="text|textCapSentences" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inRegLastName"
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/signup_lastName"
                    android:inputType="text|textCapSentences" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_phone_black_24dp"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/signup_icon_desc"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inRegPhone"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/signup_phone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_home_black_24dp"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/signup_icon_desc"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inRegCity"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/signup_city"
                android:inputType="text|textCapSentences" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>