<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <it.unibo.studio.unigo.utils.RoundedImageView
        android:id="@+id/RoundedProfileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/empty_profile_pic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_email_black_24dp"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/signup_icon_desc"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inRegEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_lock_black_24dp"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/signup_icon_desc"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inRegPass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inRegPassConfirm"
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/signup_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>