<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_location_city_black_24dp"
            android:tint="@android:color/darker_gray"/>
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_region"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/spinner_region_hint"
            android:textColorHint="@color/colorLightGray"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            app:srcCompat="@drawable/ic_school_black_24dp"
            android:tint="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner_uni"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/spinner_uni_hint"
                android:textColorHint="@color/colorLightGray"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"/>
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner_school"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/spinner_school_hint"
                android:textColorHint="@color/colorLightGray"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"/>
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner_course"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/spinner_course_hint"
                android:textColorHint="@color/colorLightGray"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>